[20260303][Tamnm]: init shift assignment
